@@ -1,4 +1,11 @@
 2006-02-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: catch libparted exceptions and display them in
+	  the operationdetails if an operation has failed.
+	* src/Dialog_Progress.cc: small cosmetic change to the errordialog.
+
+2006-02-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* improved errorhandling in Set_Used_Sectors() in the filesystemclasses
 	
